# HMI-ROMANIZER

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md
dictionaries/: abbreviations.json  custom_terms.json
python/: pyproject.toml
python/romanizer/: __init__.py  cli.py  core.py  corpus_diff.py  dictionary.py  docx_parts.py  hepburn.py  ooxml_parts.py  run_reassembly.py
python/romanizer/handlers/: __init__.py  docx_handler.py  pptx_handler.py  xlsx_handler.py
python/tests/: test_cli.py  test_core.py  test_corpus_diff.py  test_dictionary.py  test_docx_handler.py  test_docx_spans.py  test_overrides.py  test_pptx_handler.py  test_samples.py  test_unidic_schema.py  test_xlsx_handler.py  test_xlsx_refs.py
python/tests/fixtures/: build_fixtures.py
samples/: 05_lists.docx  10_composite.docx  11_fragmented.docx  12_spreadsheet.xlsx  13_slides.pptx  README.md
